210812|패캠 node 올인원 04_07
04. sequelize
  07_DB 조회

--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/products.html
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/products.html
@@ -3,16 +3,21 @@
 <table class="table table-bordered table-hover">
   <tr>
     <th>제목</th>
+    <th>가격</th>
     <th>작성일</th>
     <th>삭제</th>
   </tr>
+
+  {% for product in products %}
   <tr>
-    <td>제품 이름</td>
-    <td>2021-07-07</td>
+    <td>{{product.name}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.createdAt}}</td>
     <td>
       <a href="/admin/products/write" class="btn btn-danger">삭제</a>
     </td>
   </tr>
+  {% endfor %}
 </table>
 
 <a href="/admin/products/write" class="btn btn-default">작성하기</a>
