210813|패캠 Node 올인원 04_07
04.sequelize
  07_DB 조회

--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/layout/base.html
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/layout/base.html
@@ -30,8 +30,8 @@
                 <a href="/admin/products/write">Write</a>
               </li>
               #} {% from "macro/link.html" import link %} {{
-              link('/admin/products', "admin", req_path )}} {{
-              link('/admin/products/write', "write", req_path )}}
+              link('/admin/products', "admin", req_path )}}
+              <!-- {{ link('/admin/products/write', "write", req_path )}} -->
             </ul>
           </div>
         </div>
