--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/products.html
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/products.html
@@ -13,8 +13,9 @@
     <td>
       <a href="/admin/products/detail/{{ product.id }}"> {{product.name}} </a>
     </td>
-    <td>{{product.price}}</td>
-    <td>{{product.createdAt}}</td>
+    <td>{{ product.price }}</td>
+    <td>{{ product.dateFormat(product.createdAt) }}</td>
+    <td>{{ product.createdAt }}</td>
     <td>
       <a href="/admin/products/write" class="btn btn-danger">삭제</a>
     </td>
