--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/detail.html
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/detail.html
@@ -4,10 +4,11 @@ block content %}
 <div class="panel panel-default">
   <div class="panel-heading">{{ product.name }}</div>
   <div class="panel-body">
-    <div style="padding-bottom: 10px">작성일 : {{ product.createdAt }}</div>
+    <div style="padding-bottom: 10px">
+      작성일 : {{ product.dateFormat(product.createdAt) }}
+    </div>
+    {{ product.description }}
   </div>
-
-  {{ product.description }}
 </div>
 
 <a href="/admin/products" class="btn btn-default">목록으로</a>
