--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/write.html
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/write.html
@@ -4,15 +4,36 @@
   <table class="table table-bordered">
     <tr>
       <th>제품명</th>
-      <td><input type="test" name="name" class="form-control" /></td>
+      <td>
+        <input
+          type="test"
+          name="name"
+          class="form-control"
+          value="{{ product.name }}"
+        />
+      </td>
     </tr>
     <tr>
       <th>가격</th>
-      <td><input type="test" name="price" class="form-control" /></td>
+      <td>
+        <input
+          type="test"
+          name="price"
+          class="form-control"
+          value="{{ product.price }}"
+        />
+      </td>
     </tr>
     <tr>
       <th>설명</th>
-      <td><input type="test" name="description" class="form-control" /></td>
+      <td>
+        <input
+          type="test"
+          name="description"
+          class="form-control"
+          value="{{ product.name }}"
+        />
+      </td>
     </tr>
   </table>
   <button class="btn btn-primary">작성하기</button>
