--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/products.html
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/src/template/admin/products.html
@@ -16,7 +16,13 @@
     <td>{{ product.price }}</td>
     <td>{{ product.dateFormat(product.createdAt) }}</td>
     <td>
-      <a href="/admin/products/write" class="btn btn-danger">삭제</a>
+      <a
+        href="/admin/products/delete/{{ product.id }}"
+        class="btn btn-danger"
+        onclick="return confirm('삭제하시겠습니까?')"
+      >
+        삭제
+      </a>
     </td>
   </tr>
   {% endfor %}
